syntax = "proto3";

package transaction.v1;

option go_package = "github.com/galadeat/bank-sim/api/proto/transaction/v1;transactionv1";

import "common/v1/money.proto";

service Transaction {
    rpc Deposit(DepositRequest) returns (TransactionResponse);
    rpc Withdraw(WithdrawRequest) returns (TransactionResponse);
    rpc Transfer(TransferRequest) returns (TransactionResponse);
}

message DepositRequest {
    string account_id = 1;
    common.v1.Money amount = 2;
}

message WithdrawRequest {
    string account_id = 1;
    common.v1.Money amount = 2;
}

message TransferRequest {
    string from_account_id = 1;
    string to_account_id = 2;
    common.v1.Money amount = 3;
}

message TransactionResponse {
    string transaction_id = 1;
    string status = 2; // "PENDING", "SUCCESS", "FAILED
}